--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <link rel="stylesheet" href="css/utils.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/mobile.css">
-    <title>iBlog - Heaven for bloggers</title>
+    <title>Shiv-Svarajya.com</title>
 </head>
 
 <body>
     <nav class="navigation max-width-1 m-auto">
         <div class="nav-left">
             <a href="/">
-                <span><img src="img/logo.png" width="94px" alt=""></span>
+                <span><img src="img/sm.jfif" width="94px" alt=""></span>
             </a>
             <ul>
                 <li><a href="/">Home</a></li>
@@ -36,17 +36,12 @@
     </div>
     <div class="m-auto content max-width-1 my-2">
         <div class="content-left">
-            <h1>The heaven for bloggers</h1>
-            <p>iBlog is a website which lets you submit an article which upon approval will be up on our website and you
-                can get a good amount of reach from here!</p>
-            <p>My Halloween decorations are staying in the box this year. To be honest, they didn’t make it out of the
-                box last year either. My Halloween spirit has officially been bludgeoned to death by teenagers who no
-                longer care and a persistent October fear of the Northern California wildfires. And speaking of fear,
-                isn’t there more than enough of that going around? Maybe all of us can pretend that Halloween isn’t even
-                happening this year?</p>
+            <h1 style="color:orange; "> Shri Chhatrapati Shivaji Maharaj</h1>
+            <p>    Shivaji Shahaji Bhosle also referred to as Chhatrapati Shivaji Maharaj, was an Indian ruler and a member of the Bhonsle Maratha clan. Chhatrapati Shivaji Maharaj carved out his own independent kingdom from the declining Adilshahi sultanate of Bijapur which formed the genesis of the Maratha Empire. In 1674, he was formally crowned the Chhatrapati of his realm at Raigad Fort.</p>
+            <p>Born :- 19 February 1630. <br> Died :-  3 April 1680.</p>
         </div>
         <div class="content-right">
-            <img src="img/home.svg" alt="iBlog">
+            <img src="img/sm2.jfif" alt="raigad">
         </div>
     </div>
 
@@ -68,11 +63,11 @@
         </div>
         <div class="home-article">
             <div class="home-article-img">
-                <img src="img/3.png" alt="article">
+                <img src="img/raigad.jpg" alt="article">
             </div>
             <div class="home-article-content font1">
                 <a href="/blogpost.html">
-                    <h3>Lorem ipsum dolor sit amet consectetur adipisicing.</h3>
+                    <h3>Raigad Fort ipsum dolor sit amet consectetur adipisicing.</h3>
                 </a>
 
                 <div>Author Name</div>
@@ -81,11 +76,11 @@
         </div>
         <div class="home-article">
             <div class="home-article-img">
-                <img src="img/1.png" alt="article">
+                <img src="img/shivneri.jpg" alt="article">
             </div>
             <div class="home-article-content font1">
                 <a href="/blogpost.html">
-                    <h3>Lorem ipsum dolor sit amet consectetur adipisicing.</h3>
+                    <h3>Shivneri Fort ipsum dolor sit amet consectetur adipisicing.</h3>
                 </a>
 
                 <div>Author Name</div>
@@ -94,11 +89,11 @@
         </div>
         <div class="home-article">
             <div class="home-article-img">
-                <img src="img/2.png" alt="article">
+                <img src="img/vijaydurg.jpg" alt="article">
             </div>
             <div class="home-article-content font1">
                 <a href="/blogpost.html">
-                    <h3>Lorem ipsum dolor sit amet consectetur adipisicing.</h3>
+                    <h3>Vijaydurg Fort ipsum dolor sit amet consectetur adipisicing.</h3>
                 </a>
 
                 <div>Author Name</div>
@@ -107,11 +102,11 @@
         </div>
         <div class="home-article">
             <div class="home-article-img">
-                <img src="img/1.png" alt="article">
+                <img src="img/sindhu.jpg" alt="article">
             </div>
             <div class="home-article-content font1">
                 <a href="/blogpost.html">
-                    <h3>Lorem ipsum dolor sit amet consectetur adipisicing.</h3>
+                    <h3>Sindhudurg Fort ipsum dolor sit amet consectetur adipisicing.</h3>
                 </a>
 
                 <div>Author Name</div>
@@ -120,11 +115,11 @@
         </div>
         <div class="home-article">
             <div class="home-article-img">
-                <img src="img/11.svg" alt="article">
+                <img src="img/pratapgarh.jpg" alt="article">
             </div>
             <div class="home-article-content font1">
                 <a href="/blogpost.html">
-                    <h3>Lorem ipsum dolor sit amet consectetur adipisicing.</h3>
+                    <h3>Pratapgarh Fort ipsum dolor sit amet consectetur adipisicing.</h3>
                 </a>
 
                 <div>Author Name</div>
@@ -133,43 +128,18 @@
         </div>
         <div class="home-article">
             <div class="home-article-img">
-                <img src="img/3.png" alt="article">
+                <img src="img/deogiri.jfif" alt="article">
             </div>
             <div class="home-article-content font1">
                 <a href="/blogpost.html">
-                    <h3>Lorem ipsum dolor sit amet consectetur adipisicing.</h3>
+                    <h3>Deogiri Fort ipsum dolor sit amet consectetur adipisicing.</h3>
                 </a>
 
                 <div>Author Name</div>
                 <span>07 January | 6 min read</span>
             </div>
         </div>
-        <div class="home-article">
-            <div class="home-article-img">
-                <img src="img/2.png" alt="article">
-            </div>
-            <div class="home-article-content font1">
-                <a href="/blogpost.html">
-                    <h3>Lorem ipsum dolor sit amet consectetur adipisicing.</h3>
-                </a>
-
-                <div>Author Name</div>
-                <span>07 January | 6 min read</span>
-            </div>
-        </div>
-        <div class="home-article">
-            <div class="home-article-img">
-                <img src="img/11.svg" alt="article">
-            </div>
-            <div class="home-article-content font1">
-                <a href="/blogpost.html">
-                    <h3>Lorem ipsum dolor sit amet consectetur adipisicing.</h3>
-                </a>
-
-                <div>Author Name</div>
-                <span>07 January | 6 min read</span>
-            </div>
-        </div>
+        
 
     </div>
 
