--- a/contact.html
+++ b/contact.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/contact.css">
     <link rel="stylesheet" href="css/mobile.css">
-    <title>iBlog - Heaven for bloggers</title>
+    <title>Shiv-Svarajya.com</title>
 </head>
 <body>
     <nav class="navigation max-width-1 m-auto">
         <div class="nav-left">
             <a href="/">
-                <span><img src="img/logo.png" width="94px" alt=""></span>
+                <span><img src="img/sm.jfif" width="94px" alt=""></span>
             </a>
             <ul>
                 <li><a href="/">Home</a></li>
