--- a/contact.html
+++ b/contact.html
@@ -62,8 +62,8 @@
    
 
     <div class="footer">
-        <p>Copyright &copy; iBlog.com </p>
-         <a href="https://www.vecteezy.com/free-vector/typewriter">Vector Credits: Vecteezy</a> 
+        <p>Copyright &copy; Shiv-Svarajya.netlify.app </p>
+        <!-- <a href="https://www.vecteezy.com/free-vector/typewriter">Vector Credits: Vecteezy</a> -->
     </div>
 </body>
 </html>
