--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
         <div class="nav-right">
             <form action="/search.html" method="get">
-                <input class="form-input" type="text" name="query" placeholder="Article Search">
+                <input class="form-input" type="text" name="query" placeholder="Search Forts">
                 <button class="btn">Search</button>
             </form>
 
@@ -49,7 +49,7 @@
         <hr>
     </div>
     <div class="home-articles max-width-1 m-auto font2">
-        <h2>Featured Articles</h2>
+        <h2>Forts in Details</h2>
         <div class="year-box adjust-year">
             <div>
                 <h3>Year </h3>
@@ -66,12 +66,12 @@
                 <img src="img/raigad.jpg" alt="article">
             </div>
             <div class="home-article-content font1">
-                <a href="/blogpost.html">
-                    <h3>Raigad Fort ipsum dolor sit amet consectetur adipisicing.</h3>
+                <a href="/raigad.html">
+                    <h3>Raigad Fort located in Mahad, Raigad district of Maharashtra.</h3>
                 </a>
 
-                <div>Author Name</div>
-                <span>07 January | 6 min read</span>
+                <div>From Wikipedia</div>
+                <span>Mayuri Biradar | Pune</span>
             </div>
         </div>
         <div class="home-article">
@@ -79,12 +79,12 @@
                 <img src="img/shivneri.jpg" alt="article">
             </div>
             <div class="home-article-content font1">
-                <a href="/blogpost.html">
-                    <h3>Shivneri Fort ipsum dolor sit amet consectetur adipisicing.</h3>
+                <a href="/shivneri.html">
+                    <h3>Shivneri Fort located near Junnar in Pune district in Maharashtra.</h3>
                 </a>
 
-                <div>Author Name</div>
-                <span>07 January | 6 min read</span>
+                <div>Own Analysis</div>
+                <span>Tejaswini Dhande  | Paithan</span>
             </div>
         </div>
         <div class="home-article">
@@ -92,51 +92,26 @@
                 <img src="img/vijaydurg.jpg" alt="article">
             </div>
             <div class="home-article-content font1">
-                <a href="/blogpost.html">
-                    <h3>Vijaydurg Fort ipsum dolor sit amet consectetur adipisicing.</h3>
+                <a href="/vijaydurg.html">
+                    <h3>Vijaydurg Fort is situated in the Devgad Taluka of Sindhudurg, Maharashtra.</h3>
                 </a>
 
-                <div>Author Name</div>
-                <span>07 January | 6 min read</span>
+                <div>Research</div>
+                <span>Mansi Patil | Udgir</span>
             </div>
         </div>
-        <div class="home-article">
-            <div class="home-article-img">
-                <img src="img/sindhu.jpg" alt="article">
-            </div>
-            <div class="home-article-content font1">
-                <a href="/blogpost.html">
-                    <h3>Sindhudurg Fort ipsum dolor sit amet consectetur adipisicing.</h3>
-                </a>
-
-                <div>Author Name</div>
-                <span>07 January | 6 min read</span>
-            </div>
-        </div>
-        <div class="home-article">
-            <div class="home-article-img">
-                <img src="img/pratapgarh.jpg" alt="article">
-            </div>
-            <div class="home-article-content font1">
-                <a href="/blogpost.html">
-                    <h3>Pratapgarh Fort ipsum dolor sit amet consectetur adipisicing.</h3>
-                </a>
-
-                <div>Author Name</div>
-                <span>07 January | 6 min read</span>
-            </div>
-        </div>
+       
         <div class="home-article">
             <div class="home-article-img">
                 <img src="img/deogiri.jfif" alt="article">
             </div>
             <div class="home-article-content font1">
-                <a href="/blogpost.html">
-                    <h3>Deogiri Fort ipsum dolor sit amet consectetur adipisicing.</h3>
+                <a href="/deogiri.html">
+                    <h3>Deogiri Fort located in Devagiri village near Chh.Sambhaji Nagar, Maharashtra.</h3>
                 </a>
 
-                <div>Author Name</div>
-                <span>07 January | 6 min read</span>
+                <div> From Wikipedia</div>
+                <span>Rahul Bhagat | Vashim</span>
             </div>
         </div>
         
@@ -144,8 +119,8 @@
     </div>
 
     <div class="footer">
-        <p>Copyright &copy; iBlog.com </p>
-        <a href="https://www.vecteezy.com/free-vector/typewriter">Vector Credits: Vecteezy</a>
+        <p>Copyright &copy; Shiv-Svarajya.netlify.app </p>
+        <!-- <a href="https://www.vecteezy.com/free-vector/typewriter">Vector Credits: Vecteezy</a> -->
     </div>
 </body>
 
